deployments/wizarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wizarr-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`invite.gyurus.hu`)
      kind: Rule
      services:
        - name: wizarr-service
          port: 80
